--- a/Changes
+++ b/Changes
@@ -1,11 +1,15 @@
 Revision history for DBIx-Class-InflateColumn-Markup
 
+{{$NEXT}}
+	- Repackaged with Dist::Zilla
+	- Fixed bug [66982]: inc::Module::Install was not included with the distribution
+	  (now no longer needed)
+
 0.021	2009-09-29, 23:34:00
-	Pointless update due to a typo
+	- Pointless update due to a typo
 
 0.02	2009-09-29, 23:30:00
-	Small bug fix in the load test
+	- Small bug fix in the load test
 
-0.01    2009-09-29, 18:00:00
-        First version.
-
+0.01	2009-09-29, 18:00:00
+	- Initial release.
